Aggregator ist weiter spezifiziert